--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-list.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-list.html
@@ -1,10 +1,15 @@
 
-<div class="{{ classes | join(' ') }}">
+<div class="{{ classes|join(' ') }}">
     {% if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
-    {% if description %}<div class="description">{{ description }}</div>{% endif -%}
-    <ol>
+    {%- if description %}<div class="description">{{ description }}</div>{% endif -%}
+    
+    <script type="x-template-mustache" id="{{ qname }}-item-template">
+        {{ item_template.markup | safe }}
+    </script>
+
+    <ol id="{{ qname }}-items">
         {% for y in items -%}
-        <li>{{ y.markup }}</li>
-        {% endfor -%}
+        <li data-key="{{ loop.index0 }}">{{ y.markup }}</li>
+        {%- endfor %}
     </ol>
 </div>
