--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-text.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-text.html
@@ -1,18 +1,17 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-{% set placeholder = placeholder or field.default -%}
-{% set classes = classes + [ 'control-full' ] -%}
+{%- set placeholder = placeholder or field.default -%}
+{%- set classes = classes + [ 'control-full' ] -%}
 
-<div class="control-group{{ " " ~ classes | join(' ') }}">
+<div class="control-group{{ " " ~ classes|join(' ') }}">
     <label class="control-label" for="{{ 'input-' ~ qname }}">
-        {{ title }}{{ markup_helpers.mark_required(required) }}
-    </label>
+        {{- title }}{{ markup_helpers.mark_required(required) }}</label>
     <div class="controls">
         <textarea id="{{ 'input-' ~ qname }}" name="{{ qname }}" 
-            class="{{ input_classes | list | join(" ") }}"
-            placeholder="{{ placeholder | empty_and_escape }}"  
-            {{ attrs | xmlattr -}}
-          />{{ value | empty_and_escape }}</textarea>
-        {% if description %}<div class="help-block">{{ description }}</div>{% endif %}
+            class="{{ input_classes|join(" ") }}"
+            placeholder="{{ placeholder|empty_and_escape }}"  
+            {{ attrs|xmlattr -}}
+           >{{ value|empty_and_escape }}</textarea>
+        {% if description %}<div class="help-block">{{ description }}</div>{% endif -%}
     </div>
 </div>
