--- a/ckanext/publicamundi/templates/package/snippets/objects/read-postal_address.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/read-postal_address.html
@@ -1,10 +1,11 @@
-<div class="{{ classes | join(' ') }}">
+<div class="{{ classes|join(' ') }}">
     <dt>{{ title or _('Postal Address') }}</dt>
     <dd>
-       {% if obj.address %}
+       {% if obj.address -%}
        <span>{{ obj.address }}</span>
-       {% if obj.postalcode %}<span>{{ _('Zip') }}: {{ obj.postalcode }}</span></dd>{% endif %}
-       {% else -%}
+       {%- if obj.postalcode %}<span>{{ _('Zip') }}: {{ obj.postalcode }}</span>{% endif -%}
+       {%- else -%}
        {{ _('n/a') }}
-       {% endif -%}
+       {%- endif %}
+    </dd>
 </div>
