--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-int.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-int.html
@@ -1,23 +1,22 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-{% set placeholder = placeholder or field.default -%}
-{% if input_classes is not defined %}{% set input_classes = [ 'input-small' ] %}{% endif -%}
-{% do input_classes.extend(['number', 'int']) %}
+{%- set placeholder = placeholder or field.default -%}
+{%- if input_classes is not defined %}{% set input_classes = [ 'input-small' ] %}{% endif -%}
+{%- do input_classes.extend(['number', 'int']) -%}
 
 <div class="control-group{{ " error" if errors }}{{ " " ~ classes | join(' ') }}">
     <label class="control-label" for="{{ 'input-' ~ qname }}">
-        {{ title }}{{ markup_helpers.mark_required(required) }}
-    </label>
+        {{- title }}{{ markup_helpers.mark_required(required) }}</label>
     <div class="controls">
         <input type="number" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
-            class="{{ input_classes | list | join(" ") }}"
-            value="{{ value | int(default=field.default) }}"
+            class="{{ input_classes|join(" ") }}"
+            value="{{ value|int(default=field.default) }}"
             step="1" min="{{ field.min }}" max="{{ field.max }}"
-            placeholder="{{ placeholder | empty_and_escape }}"
-            {{ attrs | xmlattr -}}
+            placeholder="{{ placeholder|empty_and_escape }}"
+            {{ attrs|xmlattr -}}
         />
         {% if errors -%}
         <span class="help-inline">{{ errors | join(', ') }}</span>
-        {% endif -%}
+        {%- endif %}
     </div>
 </div>
