--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-list-tags.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-list-tags.html
@@ -1,25 +1,24 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-{% set placeholder = placeholder or field.default -%}
-{% if input_classes is not defined %}{% set input_classes = [ 'input-xlarge' ] %}{% endif -%}
+{%- set placeholder = placeholder or field.default -%}
+{%- if input_classes is not defined %}{% set input_classes = [ 'input-xlarge' ] %}{% endif -%}
 
-<div class="control-group{{ " error" if errors }}{{ " " ~ classes | join(' ') }}">
+<div class="control-group{{ " error" if errors }}{{ " " ~ classes|join(' ') }}">
     <label class="control-label" for="{{ 'input-' ~ qname }}">
-        {{- title }}{{ markup_helpers.mark_required(required) -}}
-    </label>
+        {{- title }}{{ markup_helpers.mark_required(required) -}}</label>
     <div class="controls">
         <input type="text" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
-            class="{{ input_classes | list | join(' ') }}"
-            value="{{ value | list | join(',') }}" 
+            class="{{ input_classes|join(' ') }}"
+            value="{{ value|join(',') if value else '' }}" 
             data-module="input-select2-tags"
             data-module-width="element"
             data-module-minimuminputlength="2"
             data-module-tags="true"
             data-module-itemize="true"
-            {{ attrs | xmlattr -}}
+            {{- attrs|xmlattr -}}
         />
         {% if errors -%}
         <span class="help-inline">{{ errors | join(', ') }}</span>
-        {% endif -%}
+        {%- endif %}
     </div>
 </div>
