--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-object.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-object.html
@@ -1,7 +1,6 @@
-
-<div class="{{ classes | join(' ') }}">
-    {% if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
-    {% if description %}<div class="description">{{ description }}</div>{% endif -%}
+<div class="{{ classes|join(' ') }}">
+    {%- if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
+    {%- if description %}<div class="description">{{ description }}</div>{% endif -%}
     <div>
         {{ content.markup }}
     </div>
