--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-textline-email.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-textline-email.html
@@ -1,22 +1,21 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-{% set placeholder = placeholder or field.default -%}
-{% set input_classes = [ 'input-medium' ] if input_classes is not defined -%}
-{% do input_classes.append('email') -%}
+{%- set placeholder = placeholder or field.default -%}
+{%- set input_classes = [ 'input-medium' ] if input_classes is not defined -%}
+{%- do input_classes.append('email') -%}
 
-<div class="control-group{{ " error" if errors }}{{ " " ~ classes | join(' ') }}">
+<div class="control-group{{ " error" if errors }}{{ " " ~ classes|join(' ') }}">
     <label class="control-label" for="{{ 'input-' ~ qname }}">
-        {{ title }}{{ markup_helpers.mark_required(required) }}
-    </label>
+        {{- title }}{{ markup_helpers.mark_required(required) }}</label>
     <div class="controls">
         <input type="email" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
-            class="{{ input_classes | list | join(" ") }}"
-            value="{{ value | empty_and_escape }}" 
-            placeholder="{{ placeholder | empty_and_escape }}"
-            {{ attrs | xmlattr -}}
+            class="{{ input_classes|join(" ") }}"
+            value="{{ value|empty_and_escape }}" 
+            placeholder="{{ placeholder|empty_and_escape }}"
+            {{ attrs|xmlattr -}}
         />
-        {% if errors  -%}
+        {%- if errors  -%}
         <span class="help-inline">{{ errors | join(', ') }}</span>
-        {% endif -%}
+        {%- endif %}
     </div>
 </div>
