--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-textline.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-textline.html
@@ -1,21 +1,20 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-{% set placeholder = placeholder or field.default -%}
-{% if input_classes is not defined %}{% set input_classes = [ 'input-medium' ] %}{% endif -%}
+{%- set placeholder = placeholder or field.default -%}
+{%- if input_classes is not defined %}{% set input_classes = [ 'input-medium' ] %}{% endif -%}
 
-<div class="control-group{{ " error" if errors }}{{ " " ~ classes | join(' ') }}">
+<div class="control-group{{ " error" if errors }}{{ " " ~ classes|join(' ') }}">
     <label class="control-label" for="{{ 'input-' ~ qname }}">
-        {{ title }}{{ markup_helpers.mark_required(required) }}
-    </label>
+        {{- title }}{{ markup_helpers.mark_required(required) }}</label>
     <div class="controls">
         <input type="text" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
-            class="{{ input_classes | list | join(" ") }}"
-            value="{{ value | empty_and_escape }}" 
-            placeholder="{{ placeholder | empty_and_escape }}"
-            {{ attrs | xmlattr -}}
+            class="{{ input_classes|join(" ") }}"
+            value="{{ value|empty_and_escape }}" 
+            placeholder="{{ placeholder|empty_and_escape }}"
+            {{ attrs|xmlattr -}}
         />
         {% if errors -%}
-        <span class="help-inline">{{ errors | join(', ') }}</span>
-        {% endif -%}
+        <span class="help-inline">{{ errors|join(', ') }}</span>
+        {%- endif -%}
     </div>
 </div>
