--- a/ckanext/publicamundi/templates/package/snippets/fields/read-dict.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-dict.html
@@ -1,11 +1,11 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-<div class="{{ classes | join(' ') }}" {{ attrs | xmlattr }} >
-    <h3 class="title">{{ title }}</h3>
-    {% if description %}<div class="description">{{ description }}</div>{% endif -%}
-    <ul>
+<div class="{{ classes|join(' ') }}" {{ attrs|xmlattr }} >
+    {% if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
+    {%- if description %}<div class="description">{{ description }}</div>{% endif %}
+    <ul id="{{ qname }}-items">
         {% for k, y in items.items() -%}
-        <li>{{ y.markup }}</li>
-        {% endfor -%}
+        <li data-key="{{ k }}">{{ y.markup }}</li>
+        {%- endfor %}
     </ul>
 </div>
