--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-edit.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-edit.html
@@ -1,11 +1,9 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-<div class="{{ " " ~ classes | join(' ') }}">
-    {% if title %}<h3>{{ title }}</h3>{% endif %}
-
-    {{ markup_helpers.error_messages(errors[errors.global_key]) }} 
-
-    {% for k, f in fields.items() -%}
+<div class="{{ " " ~ classes|join(' ') }}">
+    {% if title %}<h3>{{ title }}</h3>{% endif -%}
+    {{- markup_helpers.error_messages(errors[errors.global_key]) -}} 
+    {%- for k, f in fields.items() -%}
     {{ f.markup }}
-    {% endfor -%}
+    {%- endfor %}
 </div>
