Added an example javascript module (edit dict-based collections)

--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -1,3 +1,16 @@
+header > h1.inline,
+header > h2.inline,
+header > h3.inline,
+header > h4.inline,
+header > h5.inline,
+header > h6.inline { 
+    display: inline-block 
+} 
+
+.btn-small {
+    padding: 4px 9px 3px 9px;
+}
+
 .datepicker {
     width: 250px
 }
@@ -8,6 +21,13 @@ div.controls .help-block {
 
 div.accordion-group {
     border-radius: 1px;
+}
+
+span.label.not-available {
+    padding: 3px 5px;
+    margin: 0px 7px;
+    font-size: 11px;
+    font-family: monospace;
 }
 
 select,
