--- a/ckanext/publicamundi/public/css/widgets.css
+++ b/ckanext/publicamundi/public/css/widgets.css
@@ -11,4 +11,15 @@
     font-weight: bold;
 }
 
+li .widget.object-edit-widget {
+    padding: 5px 0px;
+}
+
+.widget.field-edit-widget > ul > li header > a.btn.btn-small {
+    margin: 5px 0px 0px 0px;
+}
+.widget.field-edit-widget > ul > li header > a.btn.remove-object {
+    color: brown;
+}
+
 .widget.object-read-widget .table.metadata-table {}
