--- a/ckanext/publicamundi/templates/package/snippets/objects/edit-contact_info.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/edit-contact_info.html
@@ -2,7 +2,7 @@
 
 <div class="{{ " " ~ classes | join(' ') }}">
     <h3>{{ title }}{{ markup_helpers.mark_required(required) }}</h3>
-    {{- markup_helpers.error_messages(errors[errors.global_key]) -}} 
+    {{ markup_helpers.error_messages(errors[errors.global_key]) -}} 
     {{-
         h.markup_for_field('edit', obj.get_field('email'), 
             errors = errors.get('email') if errors else None,
