--- a/ckanext/publicamundi/templates/tests/field.html
+++ b/ckanext/publicamundi/templates/tests/field.html
@@ -1,8 +1,14 @@
-{% extends 'page.html' %}
+{% extends 'tests/base.html' %}
+
+{% block scripts %}
+{{ super() }}
+{% resource 'ckanext-publicamundi/scratch' %}
+{% endblock %}
 
 {% block primary_content_inner %}
-{{ h.markup_for_field('read', field, 
-    name_prefix = 'foo', 
-    data = { 'title': title }) 
+{{ 
+    h.markup_for_field(action|default('edit'), field, 
+        name_prefix = name_prefix, 
+        data = { 'title': title|default('A title goes here') }) 
 }}
 {% endblock %}
