--- a/ckanext/publicamundi/templates/tests/base.html
+++ b/ckanext/publicamundi/templates/tests/base.html
@@ -4,6 +4,9 @@
 
 {{ super() }}
 
+{% resource 'vendor/jquery.ui.core.js' %}
+{% resource 'vendor/jquery.ui.widget.js' %}
+
 {% resource 'ckanext-publicamundi/styles' %}
 {% resource 'ckanext-publicamundi/scripts' %}
 
