--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_form.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_form.html
@@ -1,8 +1,8 @@
 {% import "macros/form.html" as form %}
 {% import "macros/markup_helpers.html" as markup_helpers %}
 
-{% set data = data or {} %}
-{% set errors = errors or {} %}
+{%- set data = data or {} %}
+{%- set errors = errors or {} %}
 
 <form id="package-form" class="dataset-form dataset-resource-form form-horizontal" method="post" data-module="basic-form">
   {{ h.snippet('package/snippets/stages.html', stages=['complete', 'complete', 'active'], pkg_name=pkg_name) }}
@@ -19,13 +19,8 @@
   {% snippet 'package/snippets/package_metadata_fields.html', data=data, errors=errors, groups_available=groups_available %}
 
   <div class="form-actions">
-    {# TODO: Go back to previous resource form #}
     <button id="btn-save-go-resources" class="btn" name="save" value="go-resources" type="submit">{{ _('Previous') }}</button>
     <button id="btn-save-finish" class="btn btn-primary" name="save" value="finish" type="submit">{{ _('Finish') }}</button>
   </div>
 
 </form>
-
-{% resource 'ckanext-publicamundi/styles' %}
-{% resource 'ckanext-publicamundi/scripts' %}
-
