Refactored javascript widgets for collection-based fields (use jQuery-Ui widget factory)

--- a/ckanext/publicamundi/public/css/widgets.css
+++ b/ckanext/publicamundi/public/css/widgets.css
@@ -12,7 +12,7 @@
 }
 
 li .widget.object-edit-widget {
-    padding: 5px 0px;
+    /*padding: 0px 0px;*/
 }
 
 .widget.field-edit-widget > ul > li header > a.btn.btn-small {
