--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-read.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-read.html
@@ -1,5 +1,5 @@
 <div class="{{ " " ~ classes | join(' ') }}">
-    <header>{% if title %}<h3>{{ title }}</h3>{% endif -%}</header>
+    <header>{% if title %}<h3 class="inline">{{ title }}</h3>{% endif -%}</header>
     {% for k, f in fields.items() -%}
     {{ f.markup }}
     {%- endfor %}
