--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-dict.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-dict.html
@@ -1,15 +1,21 @@
 
-<div class="{{ classes | join(' ') }}">
+<div class="{{ classes|join(' ') }}"
+    data-module="edit-dict-items" 
+    data-module-qname="{{ qname }}" 
+    data-module-terms="{{ h.dump_json(terms) }}"
+   >
     {% if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
     {%- if description %}<div class="description">{{ description }}</div>{% endif -%}
-        
+
     <script type="x-template-mustache" id="{{ qname }}-item-template">
-        {{ item_template.markup|safe -}}
+        {{ item_template.markup|safe }}
     </script>
 
-    <ul id="{{ qname }}-items" >
+    <ul id="{{ qname }}-items">
         {% for k, y in items.items() -%}
         <li data-key="{{ k }}">{{ y.markup }}</li>
         {%- endfor %}
     </ul>
 </div>
+
+{% resource 'ckanext-publicamundi/item-editor' %}
