Implemented item-editor javascript module on top of jquery-ui

--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-dict-contacts-foo.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-dict-contacts-foo.html
@@ -1,6 +1,6 @@
 
 <div class="{{ classes|join(' ') }}"
-    data-module="edit-dict-items" 
+    data-module="edit-all-dict-items" 
     data-module-qname="{{ qname }}" 
     data-module-terms="{{ h.dump_json(terms) }}"
    >
