--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -8,7 +8,7 @@ header > h6.inline {
 } 
 
 .btn-small {
-    padding: 4px 9px 3px 9px;
+    padding: 4px 9px 4px 9px;
 }
 
 .datepicker {
@@ -65,6 +65,10 @@ input[type="tel"] {
 .control-group > .alert-error {
     margin: 3px 0px;
     font-size: 12px;
+}
+
+.select2-container {
+    margin-top: 0px;
 }
 
 .select2-container .select2-choice,
