--- a/ckanext/publicamundi/public/css/widgets.css
+++ b/ckanext/publicamundi/public/css/widgets.css
@@ -1,14 +1,17 @@
 
 .widget h3 { 
-    font-size: 1.05em;
+    font-size: 1.1em;
+    color: #555;
 }
 
 .widget li > .widget h3 { 
     font-size: 1em; 
+    color: inherit;
 }
 
 .widget .accordion-heading a {
     font-weight: bold;
+    font-size: 1.1em;
 }
 
 li .widget.object-edit-widget {
@@ -33,6 +36,18 @@ li .widget.object-edit-widget {
 }
 .widget.field-edit-widget.remove-hover {
     background-color: #f7f7f5;
+}
+
+.field-edit-widget > .add-item {
+    margin: 5px 0px;
+}
+.field-edit-widget > .add-item select.select-key {
+    margin-right: 5px;
+    vertical-align: top;
+} 
+.field-edit-widget > .add-item .select2-container.select-key {
+    margin-right: 5px;
+    vertical-align: top;
 }
 
 .widget.object-read-widget .table.metadata-table {}
