Added a javascript module (edit-list-items)

--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-dict-contacts-foo.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-dict-contacts-foo.html
@@ -8,6 +8,7 @@
 
 <div class="{{ classes|join(' ') }}"
     data-module="edit-selected-dict-items" 
+    data-module-title="Contact"
     data-module-qname="{{ qname }}" 
     data-module-terms="{{ h.dump_json(terms) }}"
     data-module-messages="{{ h.dump_json(messages) }}"
