--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -7,6 +7,17 @@ header > h6.inline {
     display: inline-block 
 } 
 
+.popover {
+    width: inherit;
+    max-width: 400px;
+    padding: 0px;
+    border-radius: 2px;
+}
+
+.popover .popover-title {
+    font-size: 1.05em;
+}
+
 .btn-small {
     padding: 4px 9px 4px 9px;
 }
