--- a/ckanext/publicamundi/public/css/widgets.css
+++ b/ckanext/publicamundi/public/css/widgets.css
@@ -5,7 +5,6 @@
 }
 
 .widget li > .widget h3 { 
-    font-size: 1em; 
     color: inherit;
 }
 
@@ -18,23 +17,26 @@ li .widget.object-edit-widget {
     /*padding: 0px 0px;*/
 }
 
-.widget.field-edit-widget > ul > li header > .btn.btn-small {
+.field-edit-widget > ul > li header > .btn.btn-small {
 }
 
-.widget.field-edit-widget > ul > li header > .btn.remove,
-.widget.field-edit-widget > ul > li header > .btn.delete,
-.widget.field-edit-widget > ul > li header > .btn-group.remove-opts > button {
+.field-edit-widget > ul > li header > .btn.disable,
+.field-edit-widget > ol > li header > .btn.disable,
+.field-edit-widget > ul > li header > .btn.delete,
+.field-edit-widget > ol > li header > .btn.delete,
+.field-edit-widget > ul > li header > .btn-group.remove-opts > button,
+.field-edit-widget > ol > li header > .btn-group.remove-opts > button {
     color: brown;
 }
-.widget.field-edit-widget > ul > li header > .btn-group.remove-opts .dropdown-menu a {
+.field-edit-widget > ul > li header > .btn-group.remove-opts .dropdown-menu a {
     /*cursor: pointer;*/
     color: brown;
 }
-.widget.field-edit-widget > ul > li header > .btn-group.remove-opts .dropdown-menu a:hover {
+.field-edit-widget > ul > li header > .btn-group.remove-opts .dropdown-menu a:hover {
     background-image: none;
     background-color: #f5f3f3;
 }
-.widget.field-edit-widget.remove-hover {
+.field-edit-widget.remove-hover {
     background-color: #f7f7f5;
 }
 
@@ -48,6 +50,21 @@ li .widget.object-edit-widget {
 .field-edit-widget > .add-item .select2-container.select-key {
     margin-right: 5px;
     vertical-align: top;
+}
+
+.field-edit-widget > .add-item .description {
+    display: block;
+    font-size: 0.9em;
+    color: #777;
+    padding: 6px 0px 0px 0px;
+    vertical-align: bottom;
+}
+
+.field-edit-widget > .add-item .btn.add-item {
+    /*margin-right: 4px;*/
+}
+.field-edit-widget > .add-item .btn.clear-items {
+    color: brown;
 }
 
 .widget.object-read-widget .table.metadata-table {}
