Enhanced javascript item-editor (move-up in orderable collections)

--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -22,6 +22,10 @@ header > h6.inline {
     padding: 4px 9px 4px 9px;
 }
 
+.btn-mini {
+    padding: 3px 6px;
+}
+
 .datepicker {
     width: 250px
 }
