Rewrote parts of javascript item-editor (ordered collections and tempalte vars). Added widgets for ResponsibleParty

--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -119,6 +119,10 @@ input[type="tel"] {
     border-radius: 2px;
 }
 
+.form-horizontal .control-group {
+    margin-bottom: 14px;
+}
+
 .form-horizontal .info-inline {
     width: 235px;
 }
