--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
@@ -5,7 +5,7 @@
         { 
             'name': 'metadata',
             'heading': _('Metadata on Metadata'),
-            'fields': ['languagecode', 'datestamp']
+            'fields': ['languagecode', 'datestamp', 'contact']
         },
         { 
             'name': 'identification',
