--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-textline-email.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-textline-email.html
@@ -1,7 +1,7 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
 {%- set placeholder = placeholder or field.default -%}
-{%- set input_classes = [ 'input-medium' ] if input_classes is not defined -%}
+{%- if input_classes is not defined %}{% set input_classes = ['input-medium'] %}{% endif -%}
 {%- do input_classes.append('email') -%}
 
 <div class="control-group{{ " error" if errors }}{{ " " ~ classes|join(' ') }}">
@@ -15,7 +15,7 @@
             {{ attrs|xmlattr -}}
         />
         {%- if errors  -%}
-        <span class="help-inline">{{ errors | join(', ') }}</span>
+        <span class="help-inline">{{ errors|join(', ') }}</span>
         {%- endif %}
     </div>
 </div>
