--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-dict-contacts-foo.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-dict-contacts-foo.html
@@ -5,27 +5,4 @@
         'add-label': 'Add',
     } 
 -%}
-
-<div class="{{ classes|join(' ') }}"
-    data-module="edit-selected-dict-items" 
-    data-module-title="Contact"
-    data-module-qname="{{ qname }}" 
-    data-module-terms="{{ h.dump_json(terms) }}"
-    data-module-messages="{{ h.dump_json(messages) }}"
-    data-module-select="select"
-   >
-    {% if title %}<h3 class="title">{{ title }}</h3>{% endif -%}
-    {%- if description %}<div class="description">{{ description }}</div>{% endif -%}
-
-    <script type="x-template-mustache" id="{{ qname }}-item-template">
-        {{ item_template.markup|safe }}
-    </script>
-
-    <ul id="{{ qname }}-items">
-        {% for k, y in items.items() -%}
-        <li data-key="{{ k }}">{{ y.markup }}</li>
-        {%- endfor %}
-    </ul>
-</div>
-
-{% resource 'ckanext-publicamundi/item-editor' %}
+{% extends 'package/snippets/fields/edit-dict-all-items.html' %}
