--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -31,7 +31,8 @@ header > h6.inline {
 }
 
 div.controls .help-block {
-    font-size: 0.85em;
+    font-size: 0.92em;
+    margin-top: 8px;
 }
 
 div.accordion-group {
@@ -48,6 +49,8 @@ span.label.not-available {
 select,
 textarea,
 input[type="text"],
+input[type="url"],
+input[type="email"],
 input[type="password"],
 input[type="number"],
 input[type="tel"] {
@@ -102,6 +105,11 @@ input[type="tel"] {
     border-radius: 1px;
 }
 
+input:disabled,
+textarea:disabled {
+    cursor: text;
+}
+
 .input-append .add-on:last-child, 
 .input-append .btn:last-child, 
 .input-append .btn-group:last-child > .dropdown-toggle {
@@ -129,6 +137,11 @@ input[type="tel"] {
 
 .form-horizontal .control-group .controls > div.display {
     padding-top: 5px;
+}
+
+.form-horizontal .controls input + input {
+    display: block;
+    margin-top: 5px;
 }
 
 .tag {
