--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-list-contacts-inspire.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-list-contacts-inspire.html
@@ -1,4 +1,5 @@
-{% set 
+
+{%- set 
     messages = 
     {
         'add-label': 'New',
@@ -12,4 +13,7 @@
         'clear-alert': 'Are you sure you want to clear all ({{num}}) contacts ?',
     } 
 -%}
+
+{%- set title = none -%} {# the accordion section header is fine #}
+
 {% extends 'package/snippets/fields/edit-list-items.html' %}
